# EyeSpy

./: README.md
EyeSpy/EyeSpy/: EyeSpyApp.swift  LandmarksView.swift
EyeSpy/EyeSpy.xcodeproj/: project.pbxproj
EyeSpy/EyeSpy.xcodeproj/project.xcworkspace/xcuserdata/alexstrnik.xcuserdatad/: UserInterfaceState.xcuserstate
EyeSpy/EyeSpy.xcodeproj/xcuserdata/alexstrnik.xcuserdatad/xcschemes/: xcschememanagement.plist
EyeSpy/EyeSpy/Gaze.mlpackage/: Manifest.json
EyeSpy/EyeSpy/Gaze.mlpackage/Data/com.apple.CoreML/: model.mlmodel
EyeSpy/EyeSpy/Models/: User.swift
EyeSpy/EyeSpy/Views/: LandmarksView.swift  PlayerView.swift  RoomView.swift
EyeSpyConsole/: pyproject.toml
EyeSpyConsole/app/: main.py
EyeSpyConsole/app/models/: room.py  user.py  vector.py
EyeSpyConsole/app/templates/: create.html  room.html
