[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["alexstrnik <alex.str.nik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
websockets = "^12.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
